# prelim

./: README.md  notes  notes.md  prelim.cabal
src/: Prelim.hs
src/Prelim/: Add.hs  Prelude.hs
